--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #621402;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 .header {
+    min-height: 100vh;
+    background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%), url("../images/background.png") no-repeat center top / cover;
+}
+
+.navbar {
     display: flex;
     align-items: center;
     padding-top: 30px;
@@ -36,7 +46,6 @@ body {
     display: flex;
     align-items: center;
     margin-left: auto;
-    color: white;
     font-size: 16px;
 }
 
@@ -45,4 +54,144 @@ body {
     height: 33px;
     border-radius: 50%;
     margin-left: 11px;
+}
+
+.film {
+    display: flex;
+    align-items: center;
+    margin-top: 60px;
+}
+
+.film-title-small {
+    opacity: 0.5;
+    font-size: 24px;
+    line-height: 150%;
+}
+
+.film-title {
+    font-size: 36px;
+    margin-top: 11px;
+    margin-bottom: 23px;
+}
+
+.film-description {
+    max-width: 550px;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: justify;
+}
+
+.film-trailer {
+    margin: auto;
+}
+
+.film-details {
+    display: flex;
+    margin-top: 40px;
+}
+
+.time {
+    display: flex;
+    align-items: center;
+    margin-right: 34px;
+}
+
+.time-icon {
+    margin-right: 14px;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+}
+
+.rating-icon {
+    margin-right: 14px;
+}
+
+.rating-current {
+    font-size: 24px;
+    line-height: 150%;
+}
+
+.session {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 62px;
+    padding-top: 46px;
+    padding-bottom: 64px;
+    border-top: 1px solid rgba(255, 255, 255, 0.50);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.50);
+}
+
+
+.session-label {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.session-date-block {
+    display: flex;
+}
+
+.session-date-item {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(255, 255, 255, 0.50);
+    border-radius: 5px;
+    width: 90px;
+    height: 90px;
+    margin-right: 15px;
+    padding: 9px 28px;
+}
+
+.session-date-item:hover {
+    color: #621402;
+    background: #FE8E05;
+}
+
+.session-month {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.session-day {
+    font-size: 30px;
+    line-height: 35px;
+    font-weight: 900;
+}
+
+.session-weekday {
+    font-size: 19px;
+    line-height: 22px;
+}
+
+.select-place {
+    color: white;
+    padding-left: 18px;
+    width: 470px;
+    height: 60px;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.50);
+    background: rgba(255, 255, 255, 0.15);
+    margin-top: 20px;
+}
+
+.select-time {
+    width: 108px;
+    height: 60px;
+    color: white;
+    padding-left: 18px;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.50);
+    background: rgba(255, 255, 255, 0.15);
+    margin-top: 20px;
+}
+
+option {
+    color: black;
 }
