--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #621402;
     font-family: 'Roboto', sans-serif;
+    color: white;
+
 }
 
 .header {
-    <<<<<<< Updated upstream=======background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%), url("../images/background.png") no-repeat center top / cover;
-    padding-bottom: 60px;
+    min-height: 100vh;
+    background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%), url("../images/background.png") no-repeat center top / cover;
 }
 
 .navbar {
-    >>>>>>>Stashed changes display: flex;
+    display: flex;
     align-items: center;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -41,7 +47,6 @@ body {
     display: flex;
     align-items: center;
     margin-left: auto;
-    color: white;
     font-size: 16px;
 }
 
@@ -191,6 +196,7 @@ body {
 option {
     color: black;
 }
+
 
 .select-cinema {
     width: 470px;
