--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 .header {
-    min-height: 100vh;
     background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%), url("../images/background.png") no-repeat center top / cover;
+    padding-bottom: 60px;
 }
 
 .navbar {
